# stategine

./: Cargo.toml  Makefile  README.md
examples/: ascii-forge.rs  countdown.rs  ratatui.rs  wait_for_input.rs
src/: commands.rs  lib.rs  prelude.rs  states.rs
src/system/: conditional_system_set.rs  function_system.rs  into_system.rs  into_system_set.rs  mod.rs
src/system/param/: mod.rs  query.rs  query_mut.rs  res.rs  res_mut.rs
